--- a/index.html
+++ b/index.html
@@ -227,17 +227,17 @@
                         <div id="results-carousel" class="carousel results-carousel">
                             <div class="item">
                                 <video poster="" id="" autoplay controls muted loop playsinline height="100%">
-                                    <source src="videos/real-1-hb.mp4" type="video/mp4">
+                                    <source src="videos/real-1.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="item">
                                 <video poster="" id="" autoplay controls muted loop playsinline height="100%">
-                                    <source src="videos/real-2-hb.mp4" type="video/mp4">
+                                    <source src="videos/real-2.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="item">
                                 <video poster="" id="" autoplay controls muted loop playsinline height="100%">
-                                    <source src="videos/real-3-hb.mp4" type="video/mp4">
+                                    <source src="videos/real-3.mp4" type="video/mp4">
                                 </video>
                             </div>
                         </div>
