--- a/index.html
+++ b/index.html
@@ -175,6 +175,13 @@
                     <video poster="" id="" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-1.mp4" type="video/mp4">
                     </video>
+                    <div class="video-overlay">
+                        <p>Which rug did I put next to the kitchen sink?<br>
+                            A) There is no rug<br>
+                            B) White one <br>
+                            C) Gray one <br>
+                            D) Green one</p>
+                    </div>
                   </div>
                   <div class="item">
                     <video poster="" id="" autoplay controls muted loop playsinline height="100%">
