--- a/index.html
+++ b/index.html
@@ -171,47 +171,103 @@
             <div class="hero-body">
               <div class="container">
                 <div id="results-carousel" class="carousel results-carousel">
-                  <div class="item">
-                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
+                  <div class="item-1">
+                    <video poster="" id="1" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-1.mp4" type="video/mp4">
                     </video>
                     <div class="video-overlay">
-                        <p>Which rug did I put next to the kitchen sink?<br>
+                        <p>Which rug did I put next to the kitchen sink?
+                            <!-- <br>
                             A) There is no rug<br>
                             B) White one <br>
                             C) Gray one <br>
-                            D) Green one</p>
+                            D) Green one -->
+                        </p>
                     </div>
                   </div>
-                  <div class="item">
-                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
+                  <div class="item-2">
+                    <video poster="" id="2" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-2.mp4" type="video/mp4">
                     </video>
+                    <div class="video-overlay">
+                        <p>Which rug did I put next to the kitchen sink?
+                            <!-- <br>
+                            A) There is no rug<br>
+                            B) White one <br>
+                            C) Gray one <br>
+                            D) Green one -->
+                        </p>
+                    </div>
                   </div>
-                  <div class="item">
-                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
+                  <div class="item-3">
+                    <video poster="" id="3" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-3.mp4" type="video/mp4">
                     </video>
+                    <div class="video-overlay">
+                        <p>Which rug did I put next to the kitchen sink?
+                            <!-- <br>
+                            A) There is no rug<br>
+                            B) White one <br>
+                            C) Gray one <br>
+                            D) Green one -->
+                        </p>
+                    </div>
                   </div>
-                  <div class="item">
-                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
+                  <div class="item-4">
+                    <video poster="" id="4" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-4.mp4" type="video/mp4">
                     </video>
+                    <div class="video-overlay">
+                        <p>Which rug did I put next to the kitchen sink?
+                            <!-- <br>
+                            A) There is no rug<br>
+                            B) White one <br>
+                            C) Gray one <br>
+                            D) Green one -->
+                        </p>
+                    </div>
                   </div>
-                  <div class="item">
-                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
+                  <div class="item-5">
+                    <video poster="" id="5" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-5.mp4" type="video/mp4">
                     </video>
+                    <div class="video-overlay">
+                        <p>Which rug did I put next to the kitchen sink?
+                            <!-- <br>
+                            A) There is no rug<br>
+                            B) White one <br>
+                            C) Gray one <br>
+                            D) Green one -->
+                        </p>
+                    </div>
                   </div>
-                  <div class="item">
-                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
+                  <div class="item-6">
+                    <video poster="" id="6" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-6.mp4" type="video/mp4">
                     </video>
+                    <div class="video-overlay">
+                        <p>Which rug did I put next to the kitchen sink?
+                            <!-- <br>
+                            A) There is no rug<br>
+                            B) White one <br>
+                            C) Gray one <br>
+                            D) Green one -->
+                        </p>
+                    </div>
                   </div>
-                  <div class="item">
-                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
+                  <div class="item-7">
+                    <video poster="" id="7" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-7.mp4" type="video/mp4">
                     </video>
+                    <div class="video-overlay">
+                        <p>Which rug did I put next to the kitchen sink?
+                            <!-- <br>
+                            A) There is no rug<br>
+                            B) White one <br>
+                            C) Gray one <br>
+                            D) Green one -->
+                        </p>
+                    </div>
                   </div>
                 </div>
               </div>
