--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@
                         </p>
                     </div>
                   </div>
+                  <p class="px-1">
+                    Horizontal padding
+                  </p>
                   <div class="item-2">
                     <video poster="" id="2" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-2.mp4" type="video/mp4">
@@ -199,6 +202,10 @@
                         </p>
                     </div>
                   </div>
+                  <p class="px-1">
+                    Horizontal padding
+                  </p>
+
                   <div class="item-3">
                     <video poster="" id="3" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-3.mp4" type="video/mp4">
@@ -213,6 +220,9 @@
                         </p>
                     </div>
                   </div>
+                  <p class="px-1">
+                    Horizontal padding
+                  </p>
                   <div class="item-4">
                     <video poster="" id="4" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-4.mp4" type="video/mp4">
@@ -227,6 +237,9 @@
                         </p>
                     </div>
                   </div>
+                  <p class="px-1">
+                    Horizontal padding
+                  </p>
                   <div class="item-5">
                     <video poster="" id="5" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-5.mp4" type="video/mp4">
@@ -241,6 +254,9 @@
                         </p>
                     </div>
                   </div>
+                  <p class="px-1">
+                    Horizontal padding
+                  </p>
                   <div class="item-6">
                     <video poster="" id="6" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-6.mp4" type="video/mp4">
@@ -255,6 +271,9 @@
                         </p>
                     </div>
                   </div>
+                  <p class="px-1">
+                    Horizontal padding
+                  </p>
                   <div class="item-7">
                     <video poster="" id="7" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-7.mp4" type="video/mp4">
@@ -269,6 +288,9 @@
                         </p>
                     </div>
                   </div>
+                  <p class="px-1">
+                    Horizontal padding
+                  </p>
                 </div>
               </div>
             </div>
