--- a/index.html
+++ b/index.html
@@ -283,6 +283,14 @@
             </div>
         </div>
 
+        <div class="row justify-content-md-center">
+            <div class="col-md-12 col-lg-10">
+                <p class="text-justify text-center">
+                    Real-world scenarios with a Fetch mobile robot
+                </p>
+            </div>
+        </div>
+
         <div class='myscope'>
             <section class="hero is-light is-small">
                 <div class="hero-body">
