--- a/index.html
+++ b/index.html
@@ -278,14 +278,6 @@
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
                 <p class="text-justify text-center">
-                    Simulated scenarios in the Habitat simulator
-                </p>
-            </div>
-        </div>
-
-        <div class="row justify-content-md-center">
-            <div class="col-md-12 col-lg-10">
-                <p class="text-justify text-center">
                     Real-world scenarios with a Fetch mobile robot
                 </p>
             </div>
@@ -296,20 +288,47 @@
                 <div class="hero-body">
                     <div class="container">
                         <div id="results-carousel" class="carousel results-carousel">
-                            <div class="item">
-                                <video poster="" id="" autoplay controls muted loop playsinline height="100%">
+                            <div class="item-8">
+                                <video poster="" id="8" autoplay controls muted loop playsinline height="100%">
                                     <source src="videos/real-1.mp4" type="video/mp4">
                                 </video>
+                                <div class="video-overlay">
+                                    <p>Which rug did I put next to the kitchen sink?
+                                        <!-- <br>
+                                        A) There is no rug<br>
+                                        B) White one <br>
+                                        C) Gray one <br>
+                                        D) Green one -->
+                                    </p>
+                                </div>
                             </div>
-                            <div class="item">
-                                <video poster="" id="" autoplay controls muted loop playsinline height="100%">
+                            <div class="item-9">
+                                <video poster="" id="9" autoplay controls muted loop playsinline height="100%">
                                     <source src="videos/real-2.mp4" type="video/mp4">
                                 </video>
+                                <div class="video-overlay">
+                                    <p>Which rug did I put next to the kitchen sink?
+                                        <!-- <br>
+                                        A) There is no rug<br>
+                                        B) White one <br>
+                                        C) Gray one <br>
+                                        D) Green one -->
+                                    </p>
+                                </div>
                             </div>
-                            <div class="item">
-                                <video poster="" id="" autoplay controls muted loop playsinline height="100%">
+                            <div class="item-10">
+                                <video poster="" id="10" autoplay controls muted loop playsinline height="100%">
                                     <source src="videos/real-3.mp4" type="video/mp4">
                                 </video>
+                                <div class="video-overlay">
+                                    <p>Which rug did I put next to the kitchen sink?
+                                        <!-- <br>
+                                        A) There is no rug<br>
+                                        B) White one <br>
+                                        C) Gray one <br>
+                                        D) Green one -->
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
