--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
                 <p class="text-justify text-center">
-                    Real-world scenarios with a Fetch mobile robot
+                    Simulated scenarios in Habitat-Sim
                 </p>
             </div>
         </div>
@@ -290,7 +290,7 @@
                         <div id="results-carousel" class="carousel results-carousel">
                             <div class="item-8">
                                 <video poster="" id="8" autoplay controls muted loop playsinline height="100%">
-                                    <source src="videos/real-1.mp4" type="video/mp4">
+                                    <source src="videos/sim-1.mp4" type="video/mp4">
                                 </video>
                                 <div class="video-overlay">
                                     <p>Which rug did I put next to the kitchen sink?
@@ -304,7 +304,7 @@
                             </div>
                             <div class="item-9">
                                 <video poster="" id="9" autoplay controls muted loop playsinline height="100%">
-                                    <source src="videos/real-2.mp4" type="video/mp4">
+                                    <source src="videos/sim-2.mp4" type="video/mp4">
                                 </video>
                                 <div class="video-overlay">
                                     <p>Which rug did I put next to the kitchen sink?
@@ -318,7 +318,7 @@
                             </div>
                             <div class="item-10">
                                 <video poster="" id="10" autoplay controls muted loop playsinline height="100%">
-                                    <source src="videos/real-3.mp4" type="video/mp4">
+                                    <source src="videos/sim-3.mp4" type="video/mp4">
                                 </video>
                                 <div class="video-overlay">
                                     <p>Which rug did I put next to the kitchen sink?
