--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
                     </video>
                     <div class="video-overlay">
                         <p>Which rug did I put next to the kitchen sink?
-                            <!-- <br>
+                            <br>
                             A) There is no rug<br>
                             B) White one <br>
                             C) Gray one <br>
-                            D) Green one -->
+                            D) Green one
                         </p>
                     </div>
                   </div>
