--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@
 
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
-                <p class="text-justify text-center">
+                <h4 class="text-justify text-center">
                     Simulated scenarios in Habitat-Sim
-                </p>
+                </h4>
             </div>
         </div>
 
