--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             </div>
           </section>
         </div>
-
+        <br>
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
                 <h5 class="text-justify text-center">
@@ -282,7 +282,7 @@
                 </h5>
             </div>
         </div>
-
+        <br>
         <div class='myscope'>
             <section class="hero is-light is-small">
                 <div class="hero-body">
@@ -349,12 +349,12 @@
                 </div>
             </section>
         </div>
-
+        <br>
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
-                <p class="text-justify text-center">
+                <h5 class="text-justify text-center">
                     Real-world scenarios with a Fetch mobile robot
-                </p>
+                </h5>
             </div>
         </div>
 
