--- a/index.html
+++ b/index.html
@@ -160,9 +160,10 @@
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
                 <br>
-                <p class="text-justify text-center">
-                    <strong>We combine VLM's commonsense reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions, and then stop to answer questions about unknown 3D environments with calibrated confidence.</strong>
-                </p>
+                <h5 class="text-justify text-center">
+                    <!-- <strong>We combine VLM's commonsense reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions, and then stop to answer questions about unknown 3D environments with calibrated confidence.</strong> -->
+                    We combine VLM's commonsense reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions, and then stop to answer questions about unknown 3D environments with calibrated confidence.
+                </h5>
             </div>
         </div>
 
