--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <br>
                 <h5 class="text-justify text-center">
                     <!-- <strong>We combine VLM's commonsense reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions, and then stop to answer questions about unknown 3D environments with calibrated confidence.</strong> -->
-                    We combine VLM's commonsense reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions, and then stop to answer questions about unknown 3D environments with calibrated confidence.
+                    Combine VLM's commonsense reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions, and stop to answer questions about unknown 3D environments with calibrated confidence.
                 </h5>
             </div>
         </div>
