--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </a>
             </div>
             <div class="col-md-2 text-center">
-                <a href="https://youtu.be/">
+                <a href="https://youtu.be/Dn8WjF9gIiQ">
                     <img src="img/youtube_icon.png" height="45px">
                     <h4><strong>Video</strong></h4>
                 </a>
@@ -162,7 +162,7 @@
                 <br>
                 <h5 class="text-justify text-center">
                     <!-- <strong>We combine VLM's commonsense reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions, and then stop to answer questions about unknown 3D environments with calibrated confidence.</strong> -->
-                    Combine VLM's commonsense reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions, and stop to answer questions about unknown 3D environments with calibrated confidence.
+                    Combine VLM semantic reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions, and stop to answer questions about unknown 3D environments with calibrated confidence.
                 </h5>
                 <br>
             </div>
@@ -175,99 +175,87 @@
                 <div id="results-carousel" class="carousel results-carousel">
                   <div class="item-1">
                     <video poster="" id="1" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-1.mp4" type="video/mp4">
+                        <source src="videos/sim-1-v2.mp4" type="video/mp4">
                     </video>
                     <div class="video-overlay">
-                        <p>Which rug did I put next to the kitchen sink?
-                            <br>
+                        <p>Which rug did I put next to the kitchen sink?<br>
                             A) There is no rug<br>
-                            B) White one <br>
-                            C) Gray one <br>
+                            B) White one<br>
+                            C) Gray one<br>
                             D) Green one
                         </p>
                     </div>
                   </div>
                   <div class="item-2">
                     <video poster="" id="2" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-2.mp4" type="video/mp4">
+                        <source src="videos/sim-2-v2.mp4" type="video/mp4">
                     </video>
                     <div class="video-overlay">
-                        <p>Which rug did I put next to the kitchen sink?
-                            <!-- <br>
-                            A) There is no rug<br>
-                            B) White one <br>
-                            C) Gray one <br>
-                            D) Green one -->
+                        <p>How many bedside tables are there in the bedroom with the white bedding?<br>
+                            A) Three<br>
+                            B) None<br>
+                            C) One<br>
+                            D) Two
                         </p>
                     </div>
                   </div>
                   <div class="item-3">
                     <video poster="" id="3" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-3.mp4" type="video/mp4">
+                        <source src="videos/sim-3-v2.mp4" type="video/mp4">
                     </video>
                     <div class="video-overlay">
-                        <p>Which rug did I put next to the kitchen sink?
-                            <!-- <br>
-                            A) There is no rug<br>
-                            B) White one <br>
-                            C) Gray one <br>
-                            D) Green one -->
+                        <p>I am going to shower now. I need to grab some towels.<br>
+                            A) There are already some in the bathroom<br>
+                            B) There are none in the bathroom<br>
+                            C) There are some in the bedroom<br>
+                            D) There is only one in the bathroom
                         </p>
                     </div>
                   </div>
                   <div class="item-4">
                     <video poster="" id="4" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-4.mp4" type="video/mp4">
+                        <source src="videos/sim-4-v2.mp4" type="video/mp4">
                     </video>
                     <div class="video-overlay">
-                        <p>Which rug did I put next to the kitchen sink?
-                            <!-- <br>
-                            A) There is no rug<br>
-                            B) White one <br>
-                            C) Gray one <br>
-                            D) Green one -->
+                        <p>Is the lamp next to the sofa turned on?<br>
+                            A) Yes<br>
+                            B) No
                         </p>
                     </div>
                   </div>
                   <div class="item-5">
                     <video poster="" id="5" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-5.mp4" type="video/mp4">
+                        <source src="videos/sim-5-v2.mp4" type="video/mp4">
                     </video>
                     <div class="video-overlay">
-                        <p>Which rug did I put next to the kitchen sink?
-                            <!-- <br>
-                            A) There is no rug<br>
-                            B) White one <br>
-                            C) Gray one <br>
-                            D) Green one -->
+                        <p>I remember leaving some books in one of the rooms, on wooden shelves.<br>
+                            A) In the room with orange wall<br>
+                            B) In the room with white wall<br>
+                            C) In the room with green wall
                         </p>
                     </div>
                   </div>
                   <div class="item-6">
                     <video poster="" id="6" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-6.mp4" type="video/mp4">
+                        <source src="videos/sim-6-v2.mp4" type="video/mp4">
                     </video>
                     <div class="video-overlay">
-                        <p>Which rug did I put next to the kitchen sink?
-                            <!-- <br>
-                            A) There is no rug<br>
-                            B) White one <br>
-                            C) Gray one <br>
-                            D) Green one -->
+                        <p>Where did I leave the striped towel?<br>
+                            A) On the living room floor<br>
+                            B) In the bathroom<br>
+                            C) By the kitchen sink<br>
+                            D) On the dining table
                         </p>
                     </div>
                   </div>
                   <div class="item-7">
                     <video poster="" id="7" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-7.mp4" type="video/mp4">
+                        <source src="videos/sim-7-v2.mp4" type="video/mp4">
                     </video>
                     <div class="video-overlay">
-                        <p>Which rug did I put next to the kitchen sink?
-                            <!-- <br>
-                            A) There is no rug<br>
-                            B) White one <br>
-                            C) Gray one <br>
-                            D) Green one -->
+                        <p>Is my kid on the treadmill?<br>
+                            A) Yes<br>
+                            B) No
                         </p>
                     </div>
                   </div>
@@ -292,57 +280,49 @@
                         <div id="results-carousel" class="carousel results-carousel">
                             <div class="item-8">
                                 <video poster="" id="8" autoplay controls muted loop playsinline height="100%">
-                                    <source src="videos/real-1.mp4" type="video/mp4">
+                                    <source src="videos/real-1-v2.mp4" type="video/mp4">
                                 </video>
                                 <div class="video-overlay">
-                                    <p>Which rug did I put next to the kitchen sink?
-                                        <!-- <br>
-                                        A) There is no rug<br>
-                                        B) White one <br>
-                                        C) Gray one <br>
-                                        D) Green one -->
+                                    <p>What kind of stools are under the white board?<br>
+                                        A) White ones<br>
+                                        B) Dark blue ones<br>
+                                        C) Black ones<br>
+                                        D) Lime green ones
                                     </p>
                                 </div>
                             </div>
                             <div class="item-9">
                                 <video poster="" id="9" autoplay controls muted loop playsinline height="100%">
-                                    <source src="videos/real-2.mp4" type="video/mp4">
+                                    <source src="videos/real-2-v2.mp4" type="video/mp4">
                                 </video>
                                 <div class="video-overlay">
-                                    <p>Which rug did I put next to the kitchen sink?
-                                        <!-- <br>
-                                        A) There is no rug<br>
-                                        B) White one <br>
-                                        C) Gray one <br>
-                                        D) Green one -->
+                                    <p>Is there something here that I can cook my cookie dough in?<br>
+                                        A) Yes<br>
+                                        B) No
                                     </p>
                                 </div>
                             </div>
                             <div class="item-10">
                                 <video poster="" id="10" autoplay controls muted loop playsinline height="100%">
-                                    <source src="videos/real-3.mp4" type="video/mp4">
+                                    <source src="videos/real-3-v2.mp4" type="video/mp4">
                                 </video>
                                 <div class="video-overlay">
-                                    <p>Which rug did I put next to the kitchen sink?
-                                        <!-- <br>
-                                        A) There is no rug<br>
-                                        B) White one <br>
-                                        C) Gray one <br>
-                                        D) Green one -->
+                                    <p>Is the dishwasher in the kitchen open or closed?<br>
+                                        A) Closed<br>
+                                        B) Open
                                     </p>
                                 </div>
                             </div>
-                            <div class="item-10">
+                            <div class="item-11">
                                 <video poster="" id="11" autoplay controls muted loop playsinline height="100%">
-                                    <source src="videos/real-1.mp4" type="video/mp4">
+                                    <source src="videos/real-1-v2.mp4" type="video/mp4">
                                 </video>
                                 <div class="video-overlay">
-                                    <p>Which rug did I put next to the kitchen sink?
-                                        <!-- <br>
-                                        A) There is no rug<br>
-                                        B) White one <br>
-                                        C) Gray one <br>
-                                        D) Green one -->
+                                    <p>What kind of stools are under the white board?<br>
+                                        A) White ones<br>
+                                        B) Dark blue ones<br>
+                                        C) Black ones<br>
+                                        D) Lime green ones
                                     </p>
                                 </div>
                             </div>
@@ -377,7 +357,7 @@
         <div class="row justify-content-md-center">
             <!-- <br> -->
             <div class="col-md-6 text-center">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/xCXx09gfhx4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Dn8WjF9gIiQ?si=h_rtIlTsF-WH3oMK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <!-- <div class="col-md-6 text-center">
                 <blockquote class="twitter-tweet"><p lang="en" dir="ltr" width="250">LLMs can generate plans and write robot code 📝 but they can also make mistakes. How do we get LLMs to 𝘬𝘯𝘰𝘸 𝘸𝘩𝘦𝘯 𝘵𝘩𝘦𝘺 𝘥𝘰𝘯&#39;𝘵 𝘬𝘯𝘰𝘸 🤷 and ask for help?<br><br>Read more on how we can do this (with statistical guarantees) for LLMs on robots 👇<a href="https://t.co/D7mHGzNP3p">https://t.co/D7mHGzNP3p</a> <a href="https://t.co/M9lUqlZ5cB">pic.twitter.com/M9lUqlZ5cB</a></p>&mdash; Allen Z. Ren (@allenzren) <a href="https://twitter.com/allenzren/status/1677000811803443213?ref_src=twsrc%5Etfw">July 6, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
