--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <br>
                 <h5 class="text-justify text-center">
                     <!-- <strong>We combine VLM's commonsense reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions, and then stop to answer questions about unknown 3D environments with calibrated confidence.</strong> -->
-                    Combine VLM semantic reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions, and stop to answer questions about unknown 3D environments with calibrated confidence.
+                    Combine VLM semantic reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions of unknown 3D environments, and stop to answer questions about them with calibrated confidence.
                 </h5>
                 <br>
             </div>
@@ -173,16 +173,26 @@
             <div class="hero-body">
               <div class="container">
                 <div id="results-carousel" class="carousel results-carousel">
-                  <div class="item-1">
-                    <video poster="" id="1" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-1-v2.mp4" type="video/mp4">
+
+                  <div class="item-7">
+                    <video poster="" id="7" autoplay controls muted loop playsinline height="100%">
+                        <source src="videos/sim-7-v2.mp4" type="video/mp4">
                     </video>
                     <div class="video-overlay">
-                        <p>Which rug did I put next to the kitchen sink?<br>
-                            A) There is no rug<br>
-                            B) White one<br>
-                            C) Gray one<br>
-                            D) Green one
+                        <p>Is my kid on the treadmill?<br>
+                            A) Yes<br>
+                            B) No
+                        </p>
+                    </div>
+                  </div>
+                  <div class="item-4">
+                    <video poster="" id="4" autoplay controls muted loop playsinline height="100%">
+                        <source src="videos/sim-4-v2.mp4" type="video/mp4">
+                    </video>
+                    <div class="video-overlay">
+                        <p>Is the lamp next to the sofa turned on?<br>
+                            A) Yes<br>
+                            B) No
                         </p>
                     </div>
                   </div>
@@ -199,6 +209,19 @@
                         </p>
                     </div>
                   </div>
+                  <div class="item-1">
+                    <video poster="" id="1" autoplay controls muted loop playsinline height="100%">
+                        <source src="videos/sim-1-v2.mp4" type="video/mp4">
+                    </video>
+                    <div class="video-overlay">
+                        <p>Which rug did I put next to the kitchen sink?<br>
+                            A) There is no rug<br>
+                            B) White one<br>
+                            C) Gray one<br>
+                            D) Green one
+                        </p>
+                    </div>
+                  </div>
                   <div class="item-3">
                     <video poster="" id="3" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-3-v2.mp4" type="video/mp4">
@@ -209,17 +232,6 @@
                             B) There are none in the bathroom<br>
                             C) There are some in the bedroom<br>
                             D) There is only one in the bathroom
-                        </p>
-                    </div>
-                  </div>
-                  <div class="item-4">
-                    <video poster="" id="4" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-4-v2.mp4" type="video/mp4">
-                    </video>
-                    <div class="video-overlay">
-                        <p>Is the lamp next to the sofa turned on?<br>
-                            A) Yes<br>
-                            B) No
                         </p>
                     </div>
                   </div>
@@ -245,17 +257,6 @@
                             B) In the bathroom<br>
                             C) By the kitchen sink<br>
                             D) On the dining table
-                        </p>
-                    </div>
-                  </div>
-                  <div class="item-7">
-                    <video poster="" id="7" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-7-v2.mp4" type="video/mp4">
-                    </video>
-                    <div class="video-overlay">
-                        <p>Is my kid on the treadmill?<br>
-                            A) Yes<br>
-                            B) No
                         </p>
                     </div>
                   </div>
