update video size

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <div class="row justify-content-md-center">
             <!-- <br> -->
             <div class="col-md-6 text-center">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Dn8WjF9gIiQ?si=h_rtIlTsF-WH3oMK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="840" height="428" src="https://www.youtube.com/embed/Dn8WjF9gIiQ?si=h_rtIlTsF-WH3oMK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <!-- <div class="col-md-6 text-center">
                 <blockquote class="twitter-tweet"><p lang="en" dir="ltr" width="250">LLMs can generate plans and write robot code 📝 but they can also make mistakes. How do we get LLMs to 𝘬𝘯𝘰𝘸 𝘸𝘩𝘦𝘯 𝘵𝘩𝘦𝘺 𝘥𝘰𝘯&#39;𝘵 𝘬𝘯𝘰𝘸 🤷 and ask for help?<br><br>Read more on how we can do this (with statistical guarantees) for LLMs on robots 👇<a href="https://t.co/D7mHGzNP3p">https://t.co/D7mHGzNP3p</a> <a href="https://t.co/M9lUqlZ5cB">pic.twitter.com/M9lUqlZ5cB</a></p>&mdash; Allen Z. Ren (@allenzren) <a href="https://twitter.com/allenzren/status/1677000811803443213?ref_src=twsrc%5Etfw">July 6, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -588,7 +588,7 @@
                     Acknowledgements
                 </h3>
                 <p class="text-justify">
-                    We thank the contractors at TRI for helping post-processing the HM-EQA dataset. The authors were partially supported by the Toyota Research Institute (TRI), the NSF CAREER Award [#2044149], and the Office of Naval Research [N00014-23-1-2148]. This article solely reflects the opinions and conclusions of its authors and NSF, ONR, TRI or any other Toyota entity. The website template is from <a href="https://robot-help.github.io/">KnowNo</a> and <a href="https://nerfies.github.io/">Nerfies</a>.
+                    We thank Donovon Jackson, Derick Seale, and Tony Nguyen for contributing to the HM-EQA dataset. The authors were partially supported by the Toyota Research Institute (TRI), the NSF CAREER Award [#2044149], and the Office of Naval Research [N00014-23-1-2148]. This article solely reflects the opinions and conclusions of its authors and NSF, ONR, TRI or any other Toyota entity. The website template is from <a href="https://robot-help.github.io/">KnowNo</a> and <a href="https://nerfies.github.io/">Nerfies</a>.
                 </p>
             </div>
         </div>
