--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         
         <div class="row justify-content-md-center">
             <div class="col-md-2 text-center">
-                <a href="https://arxiv.org/abs/">
+                <a href="https://arxiv.org/abs/2403.15941">
                     <img src="img/paper_small.png" height="45px">
                     <h4><strong>Paper</strong></h4>
                 </a>
@@ -108,13 +108,13 @@
                 </a>
             </div>
             <div class="col-md-2 text-center">
-                <a href="https://github.com/Stanford-ILIAD/active-eqa">
+                <a href="https://github.com/Stanford-ILIAD/explore-eqa">
                     <img src="img/github.png" height="45px">
                     <h4><strong>Code</strong></h4>
                 </a>
             </div>
             <div class="col-md-2 text-center">
-                <a href="https://github.com/Stanford-ILIAD/active-eqa/tree/master/data">
+                <a href="https://github.com/Stanford-ILIAD/explore-eqa/tree/master/data">
                     <img src="img/dataset.png" height="45px">
                     <h4><strong>Dataset</strong></h4>
                 </a>
@@ -358,7 +358,7 @@
         <div class="row justify-content-md-center">
             <!-- <br> -->
             <div class="col-md-6 text-center">
-                <iframe width="840" height="428" src="https://www.youtube.com/embed/Dn8WjF9gIiQ?si=h_rtIlTsF-WH3oMK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="285" src="https://www.youtube.com/embed/Dn8WjF9gIiQ?si=h_rtIlTsF-WH3oMK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <!-- <div class="col-md-6 text-center">
                 <blockquote class="twitter-tweet"><p lang="en" dir="ltr" width="250">LLMs can generate plans and write robot code 📝 but they can also make mistakes. How do we get LLMs to 𝘬𝘯𝘰𝘸 𝘸𝘩𝘦𝘯 𝘵𝘩𝘦𝘺 𝘥𝘰𝘯&#39;𝘵 𝘬𝘯𝘰𝘸 🤷 and ask for help?<br><br>Read more on how we can do this (with statistical guarantees) for LLMs on robots 👇<a href="https://t.co/D7mHGzNP3p">https://t.co/D7mHGzNP3p</a> <a href="https://t.co/M9lUqlZ5cB">pic.twitter.com/M9lUqlZ5cB</a></p>&mdash; Allen Z. Ren (@allenzren) <a href="https://twitter.com/allenzren/status/1677000811803443213?ref_src=twsrc%5Etfw">July 6, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -443,7 +443,7 @@
                     HM-EQA Dataset
                 </h3>
                 <p class="text-justify">
-                    While prior work has primarily considered synthetic scenes and simple questions such as “what is the color of the coffee table?” involving basic attributes of relatively large pieces of furniture, we are interested in applying our VLM-based framework in more realistic and diverse scenarios, where the question can be more open-ended and possibly require semantic reasoning. To this end, we propose <a href="//github.com/Stanford-ILIAD/active-eqa/tree/master/data">HM-EQA</a>, a new EQA dataset with 500 questions based on 267 scenes from the <a href="//aihabitat.org/datasets/hm3d-semantics/">Habitat-Matterport 3D Research Dataset (HM3D)</a>. We consider five categories of questions:
+                    While prior work has primarily considered synthetic scenes and simple questions such as “what is the color of the coffee table?” involving basic attributes of relatively large pieces of furniture, we are interested in applying our VLM-based framework in more realistic and diverse scenarios, where the question can be more open-ended and possibly require semantic reasoning. To this end, we propose <a href="//github.com/Stanford-ILIAD/explore-eqa/tree/master/data">HM-EQA</a>, a new EQA dataset with 500 questions based on 267 scenes from the <a href="//aihabitat.org/datasets/hm3d-semantics/">Habitat-Matterport 3D Research Dataset (HM3D)</a>. We consider five categories of questions:
                     <br><p style="text-align:center;">
                         <image src="img/question.png" width="60%">
                     </p>
@@ -570,13 +570,13 @@
                 <h3>
                     Citation 
                 </h3>
-                <a href="https://arxiv.org/abs/2307.01928">[arxiv version]</a>
+                <a href="https://arxiv.org/abs/2403.15941">[arxiv version]</a>
                 <div class="form-group col-md-12">
                     <textarea id="bibtex" class="form-control" rows="6" readonly>
 @inproceedings{exploreeqa2024,
     title={Explore until Confident: Efficient Exploration for Embodied Question Answering},
     author={Ren, Allen Z. and Clark, Jaden and Dixit, Anushri and Itkina, Masha and Majumdar, Anirudha and Sadigh, Dorsa},
-    booktitle={arXiv preprint arXiv:2307.01928},
+    booktitle={arXiv preprint arXiv:2403.15941},
     year={2024}
 }</textarea>
                 </div>
